Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7495

[REG] lupdate: When using DEPENDSPATH in the .pro file lupdate no longer work.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.6.2
    • 4.6.0, 4.6.1
    • Tools: Linguist
    • None
    • Windows Xp
    • f300f5cfdf3b32e687191b071c30e14ac2721fc8

    Description

      The attached example does no longer work in 4.6.0 but it used to work in 4.5.3.

      The .pro file looks like this:

      CODECFORTR = UTF-8
      
      INCLUDEPATH = . \
          .. \
          ../../../libraries/ImportExport
      
      DEPENDPATH += $$INCLUDEPATH
      
      SOURCES += InvoiceExporter.cpp
      
      HEADERS += InvoiceTranslations.h
      
      TRANSLATIONS += Language_ara.ts \
          Language_bul.ts \
          Language_ces.ts \
          Language_dan.ts \
          Language_deu.ts \
          Language_ell.ts \
          Language_eng.ts
      
      

      And is placed in the app\client\Languages folder.
      When runnig lupdate on this file it does not find the source files so no text is found to translate.

      But if the DEPENDSPATH is removed it works.
      Replacing DEPENDSPATH with VPATH does not work either.

      Attachments

        1. LUpdateProblem.rar
          9 kB
        2. patch.diff.txt
          0.7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes