add directories with sources to list of project roots

if the pro file for the translations lives in a sibling tree of the
actual source tree, messages from included headers wouldn't have been
collected, as they were not considered part of the project.

Task-number: QTBUG-7495
(cherry picked from commit f300f5cfdf3b32e687191b071c30e14ac2721fc8)